yamls/service-mesh/176-envoyfilter.yaml
# Item 176: Istio EnvoyFilter
# EnvoyFilter allows customization of the Envoy proxy configuration
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-custom-headers
  namespace: production
spec:
  workloadSelector:
    labels:
      app: web-service
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.lua
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            inline_code: |
              function envoy_on_request(request_handle)
                request_handle:headers():add("x-custom-header", "custom-value")
              end
    - applyTo: CLUSTER
      match:
        cluster:
          name: "outbound|80||web-service.production.svc.cluster.local"
      patch:
        operation: MERGE
        value:
          commonLbConfig:
            localityWeightedLbConfig: {}
